--- a/ui/html/base.html
+++ b/ui/html/base.html
@@ -25,7 +25,7 @@
         {{template "main" .}}
     </main>
     <footer>
-        Powered by <a href="https://golang.org/">Go</a> in {{.CurrentYear}}
+        Powered by <a href="https://go.dev">Go</a> in {{.CurrentYear}}
     </footer>
     <script src="/static/js/main.js" type="text/javascript"></script>
   </body>
